@@ -1,3 +1,13 @@
+Revision 49  : Bugfixes in users,settingsform and installation by  abhishekdelta  on  2010-06-26 00:31:0
+----------------------------------------------------------------------------------------------
+Revision 48  : Fixed forum module by  abhishekdelta  on  2010-06-24 04:34:4
+----------------------------------------------------------------------------------------------
+Revision 47  : Fixed installation form check by  abhishekdelta  on  2010-06-24 04:13:3
+----------------------------------------------------------------------------------------------
+Revision 46  : Bugfixes in gallery,icons,users by  abhishekdelta  on  2010-06-23 23:48:2
+----------------------------------------------------------------------------------------------
+Revision 45  : Forgot to include a file in last revision by  abhishekdelta  on  2010-06-23 22:27:1
+----------------------------------------------------------------------------------------------
 Revision 44  : Added sphider reindexing frequency by  abhishekdelta  on  2010-06-22 16:51:1
 ----------------------------------------------------------------------------------------------
 Revision 43  : Replaces buttons with icons and adminui.css by  abhishekdelta  on  2010-06-22 16:04:0
